# ds-u2-actividad-1-listasenlazadassimples-GodSci3nc3

./: CMakeLists.txt  Doxyfile  INFORME.md  README.md  README_SPEC.md  iot_monitor  main.cpp
docs/: Doxyfile  mainpage.dox
samples/: lecturas.txt
